changed position of .saved-note to fix other elements from shifting when hovering over marker.

--- a/main.css
+++ b/main.css
@@ -18,5 +18,5 @@ img {
   display: none;
   top: 5px;
   left: 31px;
-  position: relative;
+  position: absolute;
 }
